--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
     "name": "mailchimp-form",
-    "private": true
+    "private": true,
+    "dependencies": {
+        "nodemailer": "^6.9.8"
+    }
 }
